--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,12 +7,16 @@ html{
     scroll-behavior: smooth;
 }
 
+body{
+
+}
+
 @layer components {
     .editor-menu-button {
       @apply bg-white/10 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-white/20;
     }
 
-    .editor-menu-button-active {
-        @apply bg-indigo-300 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-white/20;
-      }
+  .editor-menu-button-active {
+      @apply bg-indigo-300 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-white/20;
+    }
 }
