--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,10 +13,27 @@ body{
 
 @layer components {
     .editor-menu-button {
-      @apply bg-white/10 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-white/20;
+      @apply w-8 h-8  cursor-pointer bg-transparent
+       hover:bg-indigo-300 hover:bg-opacity-30 
+       hover:rounded-full fill-indigo-400 stroke-indigo-400 
+       active:bg-purple-400
     }
 
-  .editor-menu-button-active {
-      @apply bg-indigo-300 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-white/20;
+    .editor-menu-button-active {
+      @apply w-8 h-8 cursor-pointer bg-purple-500 
+      fill-black stroke-black rounded-md
     }
+
+    .editor-send {
+      @apply w-8 h-8  cursor-pointer 
+      fill-indigo-400 stroke-indigo-400 
+      hover:fill-indigo-200 hover:stroke-indigo-200 
+      active:bg-transparent active:fill-te_dark_font
+    }
+
+    .editor-send-active {
+      @apply w-8 h-8 cursor-pointer hover:bg-transparent
+      fill-indigo-200 stroke-indigo-200 
+    }
+
 }
