--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,14 @@ body{
   overflow: visible;
 }
 
+.ProseMirror p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
 @layer components {
     .editor-menu-button {
       @apply w-8 h-8  cursor-pointer bg-transparent
