new editor can safely send comment and the lasted user repliy show up

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,6 +39,11 @@ body{
       active:bg-transparent active:fill-te_dark_font
     }
 
+    .editor-sending {
+      @apply w-8 h-8  cursor-default 
+      fill-gray-600 
+    }
+
     .editor-send-active {
       @apply w-8 h-8 cursor-pointer hover:bg-transparent
       fill-indigo-200 stroke-indigo-200 
