引擎时间线有无限滚动了

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+div.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
+/* Hide scrollbar for IE, Edge and Firefox */
+div.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 html{
     scroll-behavior: smooth;
 }
